--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <h1>Sweet Eats Bakery</h1>
   <header>
     <nav>
-      <a href="#">About</a>
-      <a href="#">Cookies</a>
-      <a href="#">Weddings</a>
-      <a href="#">Catering</a>
-      <a href="#">Contact</a>
+      <a href="#" class="hvr-grow">About</a>
+      <a href="#" class="hvr-grow">Cookies</a>
+      <a href="#" class="hvr-grow">Weddings</a>
+      <a href="#" class="hvr-grow">Catering</a>
+      <a href="#" class="hvr-grow">Contact</a>
     </nav>
     <img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png" alt="">
     <section class="about">
