--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <!-- //HEADING// -->
   <h1>Sweet Eats Bakery</h1>
   <header>
-    <nav>
+    <nav class="headnav">
       <a href="#" class="hvr-grow">About</a>
-      <a href="#" class="hvr-grow">Cookies</a>
+      <a href="Index2.html" class="hvr-grow">Cookies</a>
       <a href="#" class="hvr-grow">Weddings</a>
       <a href="#" class="hvr-grow">Catering</a>
       <a href="#" class="hvr-grow">Contact</a>
@@ -75,7 +75,7 @@
 <footer>
   <div class="footer-content">
     <h3>Sweet Eats Bakery</h3>
-    <nav>
+    <nav class="footnav">
       <a href="#">About</a>
       <a href="#">Cookies</a>
       <a href="#">Weddings</a>
