--- a/Index2.html
+++ b/Index2.html
@@ -19,7 +19,7 @@
   <header>
     
     <nav class="headnav">
-      <a href="#" class="hvr-grow">About</a>
+      <a href="index.html" class="hvr-grow">About</a>
       <a href="#" class="hvr-grow">Cookies</a>
       <a href="#" class="hvr-grow">Weddings</a>
       <a href="#" class="hvr-grow">Catering</a>
@@ -27,20 +27,20 @@
     </nav>
 
     <section class="ck">
-      <h2 class="chchp" >CHOCOLATE CHIP</h2>
+      <h2 class="cookie" >CHOCOLATE CHIP</h2>
       <br>
       <img src="https://images.unsplash.com/photo-1497051788611-2c64812349fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1014&q=80" alt="">
-      <p>Chocolate chip cookies are our favorite so the first cookie is a chocolate chip cookie. Fantastic!</p>
+      <p class="cookie">Chocolate chip cookies are our favorite so the first cookie is a chocolate chip cookie. Fantastic!</p>
         
-      <h2 class="sgr">SUGAR</h2>
+      <h2 class="cookie">SUGAR</h2>
       <br>
       <img src="https://images.unsplash.com/photo-1542082894-fbdea8cb0edb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80" alt="">
-      <p>Sugar sugar sugar!!! Fantastic!</p>
+      <p class="cookie">Sugar sugar sugar!!! Fantastic!</p>
 
-      <h2 class="mcdm">MACADAMIA NUT</h2>
+      <h2 class="cookie">MACADAMIA NUT</h2>
       <br>
       <img src="https://images.unsplash.com/photo-1427025635812-0a30f21071e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2088&q=80" alt="">
-      <p>We're nuts for nuts! Fantastic!</p>
+      <p class="cookie">We're nuts for nuts! Fantastic!</p>
     </section>
 
   </header>
