--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <div class="container">
-  <!-- //HEADING// -->
+  <!-- //HEADING// --> 
   <h1>Sweet Eats Bakery</h1>
   <header>
     <nav class="headnav">
@@ -23,7 +23,7 @@
       <a href="#" class="hvr-grow">Catering</a>
       <a href="#" class="hvr-grow">Contact</a>
     </nav>
-    <img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png" alt="">
+      <img class="img1" src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png" alt="">
     <section class="about">
       <h2>About Sweet Eats Bakery</h2>
       <p>Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy msg powder.</p>
